--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+ProjectSettings/ProjectSettings.asset
+ProjectSettings/ProjectVersion.txt
